# learn_linux

 基于QT和国密算法的安全文件传输系统/doc/:  基于QT和国密算法的安全文件传输系统.md
 基于QT和国密算法的安全文件传输系统/project-root/: CMakeLists.txt
 基于QT和国密算法的安全文件传输系统/project-root/docs/:  基于QT和国密算法的安全文件传输系统.md
 基于QT和国密算法的安全文件传输系统/project-root/gui/: authwidgets.cpp  authwidgets.h  mainwindow.cpp  mainwindow.h
 基于QT和国密算法的安全文件传输系统/project-root/gui/ui/: mainwindow.ui
 基于QT和国密算法的安全文件传输系统/project-root/src/: main.cpp
 基于QT和国密算法的安全文件传输系统/project-root/src/database/: dbmanager.cpp  dbmanager.h
 基于QT和国密算法的安全文件传输系统/project-root/src/server/: auditlogger.cpp  auditlogger.h  main.cpp
big-little-endian/: cebitfields  cebitfields.c  cebitwise  celibrary  cepointer  cepointer.c  ceunion  ceunion.c
big-little-endian2/: cebitfields.c  celibrary.c  cepointer.c
big-little-endian3/: cebitwise.c  main.c
big-little-endian4/: main
big-little-endian5/: Makefile  ble.h  main
big-little-endian5/src/: ceunion.c
gbd-debug/: testgdb  testgdb.c
lab/: 1.sh  cc.txt~  dd.txt  debug.c  for.sh  hello  hello.c  sqrt_test  sqrt_test.c  test  testgdb  testgdb.c  tmp.txt
lab/fcntl/: 1  1.c  2  2.c  3  3.c
lab/haha/project-root/: CMakeLists.txt
lab/haha2/: 1.sh  2.sh
lab/haha2/project-root/: CMakeLists.txt
lab/haha2/project-root/gui/: mainwindow.cpp  mainwindow.h
lab/haha2/project-root/src/server/: main.cpp
lab/haha4/project-root/: CMakeLists.txt
lab/haha4/project-root/gui/: mainwindow.cpp  mainwindow.h
lab/haha4/project-root/src/database/: dbmanager.cpp
lab/haha4/project-root/src/server/: main.cpp
lab/haha_jianlouban/project-root/: CMakeLists.txt
lab/project/: Makefile
lab/project/lib/: Makefile  func.c  func.h
lab/project/src/: Makefile  main.c
lab/ps/: pipe_example  pipe_example.c
lab/sc-error/errno/: 01noerrmsg  02rtnval  03errno  04merrno  05strerr  05strerr.c  06perror  07perror2
lab/sm/sm/: Makefile  sm2_sm4_envelope  sm2_sm4_envelope.c
lab/socket/: knock  knock.c  knockmt  knockmt.c
lab/socket2/: non_blocking_client.py  non_blocking_server.py  nonblock_client  nonblock_client.c  select_server  select_server.c
lab/sublab/: 0.sh  1.sh  2.sh  test.c
lab/week2/: Makefile  aver.c  debug  debug.c  exam  example.c  hello.c  main.c  static-main  sum.c  test  test.c  test.i  test.s
lab/week3/: a.txt  listdir  listdir.c  main  main.c  myls  myls.c  processA  processA.c  processB  processB.c  rename  rename.c  set_flags  set_flags.c
lab/week4/: daemon  daemon.c  exctest  exctest.c  fork  fork.c  forkfld  forkfld.c  myshell  myshell.c  test.txt  vartest  vartest.c  zombine  zombine.c
lab/week5/: 2sigdemo  2sigdemo.c  multisignal  multisignal.c  mysleep  mysleep.c  sigactdemo  sigactdemo.c  sigchldtest  sigchldtest.c  sigdemo  sigdemo.c  sigfork  sigfork.c  test  test.c
lab/week6/: mypipe  mypipe.c  namedpipe1  namedpipe1.c  namedpipe2  namedpipe2.c  pipdemo  pipdemo.c  semexample  semexample.c  shmemPar  shmemPar.c
lab/week7/: cond  cond.c  multhead  multthread  multthread.c  sync_thread  sync_thread.c  thread_creat  thread_creat.c  withmutex.c
lab/week8/: tcpclient  tcpclient.c  tcpserver  tcpserver.c  udpclient  udpclient.c  udpserver  udpserver.c
lab/week9/: stuinfo  stuinfo.c
lab2/: cebitwise.c  celibrary.c
第一周/: 教材代码.md
第七周/: 教材代码.md
第三周/: 教材代码.md
第九周/: 教材代码.md
第二周/: 教材代码.md
第二周/droom/: Makefile
第五周/: 教材代码.md
第八周/: 教材代码.md
第六周/: 教材代码.md
第四周/: 教材代码.md
重定向实践/: ls.txt  myredirect  myredirect.c
(+45 files in other folders)
